kubernetes/gatekeeper/disable-privilege-escalation/no-allow-privilege-escalation-template.yaml
apiVersion: templates.gatekeeper.sh/v1beta1
kind: ConstraintTemplate
metadata:
  name: k8snoallowprivilegeescalation
spec:
  crd:
    spec:
      names:
        kind: K8sNoAllowPrivilegeEscalation
  targets:
    - target: admission.k8s.gatekeeper.sh
      rego: |
        package k8snoallowprivilegeescalation

        violation[{"msg": msg}] {
          input.review.object.spec.containers[_].securityContext.allowPrivilegeEscalation == true
          msg := "Privilege escalation is not allowed."
        }
